--- a/app/components/load-workflow/load-workflow-template.html
+++ b/app/components/load-workflow/load-workflow-template.html
@@ -1,5 +1,6 @@
 <div>
     <h1>{{show}}</h1>
+    <!--
     <modal-component :show.sync="show">
         <div slot="header">
             <h4>Expression</h4>
@@ -30,7 +31,8 @@
             <div class="label label-info">
                 {{error}}
             </div>
-            <pre style="height: 300px; overflow:auto"><code>{{{ tree }}}</code></pre>
+            <pre style="height: 300px; overflow:auto"><code>{{ tree }}</code></pre>
         </div>
     </modal-component>
+    -->
 </div>
