--- a/app/components/diagram/diagram-template.html
+++ b/app/components/diagram/diagram-template.html
@@ -2,10 +2,9 @@
     <div>
         <div class="row">
             <div class="col-md-5" style="margin-left: 18px;padding-top:5px">
-                <input type="text" placeholder="Unnamed workflow" class="form-control" :value="workflow.name" @keyUp="doChangeWorkflowName | debounce 500"
+                <input type="text" placeholder="Unnamed workflow" class="form-control" :value="workflow.name" @keyup="doChangeWorkflowName"
                 />
-                <input type="text" placeholder="#id" class="form-control" @keyUp="doChangeWorkflowId | debounce 500"
-                />
+                <input type="text" placeholder="#id" class="form-control" @keyup="doChangeWorkflowId" id="wfId"/>
             </div>
             <div class="col-md-6">
                 <div class="buttons-toolbar btn-group pull-right diagram-toolbar">
