--- a/app/components/toolbox/toolbox-template.html
+++ b/app/components/toolbox/toolbox-template.html
@@ -1,3 +1,3 @@
-<li class="xlist-group-item" draggable="true" v-on:dragstart="drag" data-operation-id="{{ operation.id }}">
-    <span class="fa {{operation.icon}}"></span> {{operation.name}}
+<li class="xlist-group-item" draggable="true" v-on:dragstart="drag" :data-operation-id="operation.id">
+    <span class="fa" :class="operation.icon"></span> {{operation.name}}
 </li>
