--- a/app/components/app/app.scss
+++ b/app/components/app/app.scss
@@ -28,19 +28,14 @@ html {
     padding: 2px
 }
 .logo {
-    img {
-        background: url('minilogo.png');
+    margin: 5px 0 0 10px;
+    padding: 0;
+        background: url('citron.png');
         background-size: auto 40px;
         height: 40px;
-        width: 40px;
+        width: 42px;
         border: none;
         outline: none;
-    }
-    strong {
-        font-family: 'Archivo Black', sans-serif;
-        font-size: 40px;
-        margin-top:10px;
-    }
 }
 .minimap {
     border: 1px solid #222;
