--- a/app/components/properties/transformation-template.html
+++ b/app/components/properties/transformation-template.html
@@ -1,7 +1,5 @@
 <div>
     <label>Expression</label>
-    <!-- ========== {{value}} ==============-->
-    <expression-editor-component :expression="expression"
-        :categories="categories" :current-tab="categories[0].category"> 
+    <expression-editor-component :expression="value" :categories="categories" :current-tab="categories[0].category">
     </expression-editor-component>
 </div>
