--- a/app/components/properties/properties.scss
+++ b/app/components/properties/properties.scss
@@ -157,6 +157,7 @@ $defaultFontSize: 1.2rem;
 .fixed_headers thead tr {
     display: block;
     position: relative;
+    width: 100%;
 }
 .fixed_headers tbody {
     display: block;
