Display job results

--- a/app/components/diagram/diagram.scss
+++ b/app/components/diagram/diagram.scss
@@ -221,7 +221,7 @@ li.dragging {
                     font: normal normal normal 14px/1 FontAwesome;
                     content: "\f08d     ";
             }
-            background:#fefabc;
+            background:#ffffa5;
             overflow-y: auto;
             border: none !important; 
             border-radius: 0 !important;
