--- a/app/components/diagram/diagram-template.html
+++ b/app/components/diagram/diagram-template.html
@@ -1,10 +1,10 @@
 <div tabindex="0">
     <div>
         <div class="row" v-if="showToolbar">
-            <div class="col-md-5" style="margin-left: 18px;padding-top:5px">
+            <div class="col-md-4" style="margin-left: 18px;padding-top:5px">
                 <input type="text" placeholder="Unnamed workflow" class="form-control" :value="workflow.name" @keyup="doChangeWorkflowName" />
             </div>
-            <div class="col-md-6" v-if="showToolbar">
+            <div class="col-md-7" v-if="showToolbar">
                 <div class="buttons-toolbar btn-group pull-right diagram-toolbar">
                     <button class="btn btn-success btn-sm" v-on:click="saveWorkflow"><span class="fa fa-save"></span> Save</button>
                     <button class="btn btn-primary btn-sm add-margin" v-on:click="onClickExecute"><span class="fa fa-play"></span> Execute</button>
@@ -14,6 +14,12 @@
 
                     <button class="btn btn-default btn-sm" v-on:click="zoomIn" :disabled="!zoomInEnabled"><span class="fa fa-search-plus"></span> Zoom in</button>
                     <button class="btn btn-default btn-sm add-margin" v-on:click="zoomOut" :disabled="!zoomOutEnabled"><span class="fa fa-search-minus"></span> Zoom out</button>
+
+                    <button class="btn btn-default btn-sm" v-on:click="align('left', 'min')" :disabled="!zoomInEnabled"><span class="fa fa-arrow-left"></span></button>
+                    <button class="btn btn-default btn-sm" v-on:click="align('left', 'max')" :disabled="!zoomInEnabled"><span class="fa fa-arrow-right"></span></button>
+
+                    <button class="btn btn-default btn-sm" v-on:click="align('top', 'min')" :disabled="!zoomOutEnabled"><span class="fa fa-arrow-up"></span></button>
+                    <button class="btn btn-default btn-sm add-margin" v-on:click="align('top', 'max')" :disabled="!zoomOutEnabled"><span class="fa fa-arrow-down"></span></button>
 
                     <div class="pull-right">{{zoomPercent}}</div>
                     <button class="btn btn-danger btn-sm add-margin pull-right" v-on:click="deleteSelected"><span class="fa fa-remove"></span> Remove selected</button>
