Adding icon to represent dragging support

--- a/app/components/toolbox/toolbox-template.html
+++ b/app/components/toolbox/toolbox-template.html
@@ -1,3 +1,4 @@
 <li class="list-group-item" draggable="true" v-on:dragstart="drag" :data-operation-id="operation.id">
     <span class="fa" :class="operation.icon"></span> {{operation.name}} 
+    <span class="fa pull-right fa-grip"></span> 
 </li>
